# tbunreadcount-applet

./: Makefile.am  Makefile.in  README  TBUnreadCount_Factory.server.in  configure  configure.in  tbunreadcount-applet.schemas
autom4te.cache/: output.0  traces.0
src/: Makefile.am  Makefile.in  tbunreadcount-applet.c  tbunreadcount-applet.h  tbunreadcount-battinfo.c  tbunreadcount-battinfo.h  tbunreadcount-display.c  tbunreadcount-display.h  tbunreadcount-prefs.c  tbunreadcount-prefs.h  unreadcount.c
